--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
              <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Home</button>
              <div class="dropdown-center">
-               <button type="button" class="btn btn-outline-light btn-lg px-4" data-bs-toggle="dropdown" aria-expanded="false">Pantheon</button>
+                 <a href="pantheon.html" target="_blank">
+                <button type="button" class="btn btn-outline-light btn-lg px-4" data-bs-toggle="dropdown" aria-expanded="false">Pantheon</button>
                   <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#olympians">Olympians</a></li>
                       <li><a class="dropdown-item" href="#minor-gods">Minor Gods</a></li>
                       <li><a class="dropdown-item" href="#titans">Titans</a></li>
                       </ul>
                       </div>
+                    </a>
              <button type="button" class="btn btn-outline-light btn-lg px-4">Myths</button>
              <button type="button" class="btn btn-outline-light btn-lg px-4">Rites</button>
              <button type="button" class="btn btn-outline-light btn-lg px-4">Temples</button>
