--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                       </ul>
                       </div>
                     </a>
-             <button type="button" class="btn btn-outline-light btn-lg px-4">Myths</button>
+            <a href="myths.html" target="_blank">
+                <button type="button" class="btn btn-outline-light btn-lg px-4">Myths</button>
+                </a>
              <button type="button" class="btn btn-outline-light btn-lg px-4">Rites</button>
              <button type="button" class="btn btn-outline-light btn-lg px-4">Temples</button>
 
